--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/workout
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.initialization-mode=always
-spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.username= ppmt
+spring.datasource.password= user_password
