--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.initialization-mode=always
 
 # For everyone else db. Uncomment
-spring.datasource.username= root
-spring.datasource.password=
+# spring.datasource.username= root
+# spring.datasource.password=
 
 
 # For John's db comment out
-# spring.datasource.username= ppmt
-# spring.datasource.password= user_password
+spring.datasource.username= ppmt
+spring.datasource.password= user_password
