--- a/.gitignore
+++ b/.gitignore
@@ -193,7 +193,7 @@ $RECYCLE.BIN/
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
-*.iml
+# *.iml
 # *.ipr
 
 # CMake
@@ -226,5 +226,3 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
-# Database conflict
-application.properties
