--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/workout
-
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-spring.datasource.initialization-mode=always
 
-spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_67c1657dc8fa5cc?reconnect=true
+spring.datasource.username=bc0d397ecd0400
+spring.datasource.password=39f25753
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+# spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+server.port=${PORT:8080}
+
+
